--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <title>Barbearia do Lucão</title>
 </head>
@@ -17,36 +20,47 @@
     <!-- Header -->>
     <header>
       <nav class="header-content container">
-        <div class="header-icons">
-          <a href="#">
+        <div class="header-icons" data-aos="fade-down">
+          <a href="#" target="_blank">
             <i class="fa-brands fa-instagram fa-2x"></i>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <i class="fa-brands fa-facebook fa-2x"></i>
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <i class="fa-brands fa-tiktok fa-2x"></i>
           </a>
         </div>
 
-        <div class="header-logo">
-          <img 
+        <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
+          <img
+            data-aos="flip-up"
+            data-aos-delay="300"
+            data-aos-duration="1500"
             src="assets/logo.svg"
             alt="Logo da barbearia"
           />
         </div>
 
-        <div>
-          <a class="header-button" href="#">
+        <div data-aos="fade-down">
+          <a 
+            href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20o%20agendamento%20de%20um%20hor%C3%A1rio!"
+            class="header-button"
+            target="_blank" 
+          >
             Agendar um horário
           </a>
         </div>
       </nav>
 
-      <main class="hero container">
+      <main class="hero container" data-aos="fade-up" data-aos-delay="400">
         <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
         <p>Horário de funcionamento: 09:00 ás 19:00</p>
-        <a href="#" class="button-contact" target="_blank">
+        <a 
+          href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20o%20agendamento%20de%20um%20hor%C3%A1rio!" 
+          class="button-contact" 
+          target="_blank"
+        >
           Agendar horário
         </a>
       </main>
@@ -56,14 +70,18 @@
   <!-- About -->
   <section class="about">
     <div class="about-content container">
-      <div>
+      <div data-aos="zoom-in" data-aos-delay="100">
         <img
           src="assets/images.svg"
           alt="Imagem sobre a barbearia"
         />
       </div>
 
-      <div class="about-description">
+      <div 
+        class="about-description"
+        data-aos="zoom-out-left"
+        data-aos-delay="250"
+      >
         <h2>Sobre</h2>
         <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
         <p>Horário de funcionamento: <strong>09:00</strong> às <strong>19:00</strong></p>
@@ -79,7 +97,7 @@
     </div>
 
     <section class="haircuts">
-      <div class="haircut">
+      <div class="haircut" data-aos="fade-up" data-aos-delay="150">
         <img
           src="./assets/corte1.png"
           alt="Corte"
@@ -91,7 +109,7 @@
         </div>
       </div>
 
-      <div class="haircut">
+      <div class="haircut" data-aos="fade-up" data-aos-delay="250">
         <img
           src="./assets/corte2.png"
           alt="Barba"
@@ -103,7 +121,7 @@
         </div>
       </div>
 
-      <div class="haircut"> 
+      <div class="haircut" data-aos="fade-up" data-aos-delay="350"> 
         <img
           src="./assets/corte3.png"
           alt="Corte e barba"
@@ -116,6 +134,53 @@
       </div>
     </section>
   </section>
+
+  <!-- Footer -->
+  <div class="services">
+    <h2>Venha conhecer</h2>
+  </div>
+
+  <iframe
+    width="100%"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3838.433353183447!2d-47.957454425906135!3d-15.833805123924604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3029eaad68b7%3A0xc4985755bc8593cc!2sPark%20Shopping%20Bras%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1703118454799!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+
+  <footer class="footer">
+    <div class="footer-icons">
+      <a href="#">
+        <i class="fa-brands fa-instagram fa-2x"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-facebook fa-2x"></i>
+      </a>
+      <a href="#">
+        <i class="fa-brands fa-tiktok fa-2x"></i>
+      </a>
+    </div>
+
+    <div>
+      <img
+        src="./assets/logo.svg"
+        alt="Logo da barbearia"
+      />
+    </div>  
+    
+    <p>Copyright 2023 | Barbearia do Lucão - Todos os direitos reservados.</p>
+  </footer>
+
+  <!-- Whatsapp Button -->
+
+  <a
+    href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20o%20agendamento%20de%20um%20hor%C3%A1rio!"
+    class="whatsapp-button"
+    target="_blank"
+    data-aos="zoom-in-up" data-aos-delay="400"
+  >
+    <img src="./assets/whatssapp.svg" alt="Whatsapp"/>
+    <spam class="tooltip-text">Agende seu horário</spam>
+  </a>
+
+  <script src="./script.js"></script>
 
 </body>
 </html>
